--- a/Advanced CSS/css/styles.css
+++ b/Advanced CSS/css/styles.css
@@ -1,11 +1,36 @@
 body {
+  font-family: "Lato", sans-serif;
   background: #c3cfe2;
   margin: 40px;
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.wrapper {
+  filter: drop-shadow(0rem 1rem 1rem grey);
 }
 
 header {
   background: white;
-  padding: 1em;
+  color: rgb(75, 75, 75);
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
+  padding: 2em 2em 1em 2em;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  min-height: 200px;
+  width: 336px;
+}
+
+.picca-div {
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(white 50%, #686de0 50%);
+  padding: 0 2em 0 2em;
+  width: 336px;
 }
 
 .picca {
@@ -13,12 +38,21 @@ header {
   border-color: white;
   border-style: solid;
   border-width: 4px;
-  width: 10%;
 }
 
 footer {
   background: #686de0;
-  color: white;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
   text-align: center;
-  padding-bottom: 1em;
+  padding: 2em;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  width: 336px;
+}
+
+footer > h1 {
+  margin: 0px 0px 10px 0px;
+  color: white;
 }
