--- a/Advanced CSS/css/styles.css
+++ b/Advanced CSS/css/styles.css
@@ -1,11 +1,11 @@
 body {
-  font-family: "Lato", sans-serif;
   background: #c3cfe2;
   margin: 40px;
-  text-decoration: none;
+  line-height: 1.8;
 }
 
-a:visited {
+a {
+  text-decoration: none;
   color: rgba(255, 255, 255, 0.5);
 }
 
@@ -18,7 +18,9 @@ header {
   color: rgb(75, 75, 75);
   font-family: "Lato", sans-serif;
   font-size: 1rem;
-  padding: 2em 2em 1em 2em;
+  text-align: justify;
+
+  padding: 2em 2em 0 2em;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   min-height: 200px;
@@ -46,13 +48,15 @@ footer {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
   text-align: center;
-  padding: 2em;
+  padding: 0 2em 2em 2em;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   width: 336px;
 }
 
 footer > h1 {
-  margin: 0px 0px 10px 0px;
+  margin: 0;
   color: white;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
 }
